--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>My awesome web page</title>
+        <title>My first web page</title>
     </head>
 
   <body>
-    Hello there, awesome person! 
+    Hello there! 
   </body>
 
 </html>
