--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     Hello there! 
       <h1>First header</h1>
+      <img>https://avatars.githubusercontent.com/u/78594958?v=4
   </body>
 
 </html>
