--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     Hello there! 
       <h1>First header</h1>
-      <img>https://avatars.githubusercontent.com/u/78594958?v=4
+      <img src="https://vanilla.futurecdn.net/creativebloq/media/img/missing-image.svg"> 
   </body>
 
 </html>
