--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
       <h1>First header</h1>
       <img src="https://vanilla.futurecdn.net/creativebloq/media/img/missing-image.svg"> 
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+    <li>My favorite site is <a href="https://google.com">Google</a>!</li>
 </ul>
   </body>
 
