--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <title>My first web page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
   <body>
     Hello there! 
       <h1>First header</h1>
-      <img src="https://vanilla.futurecdn.net/creativebloq/media/img/missing-image.svg"> 
+      <img src="https://images.unsplash.com/photo-1546443046-ed1ce6ffd1ab?">
      <ul>
     <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <li>My favorite site is <a href="https://google.com">Google</a>!</li>
